--- a/src/pages/ui-kit/headers-footers/headers-footers.pug
+++ b/src/pages/ui-kit/headers-footers/headers-footers.pug
@@ -29,3 +29,12 @@ div(style="height: 40px")
   }
 })
 
+div(style="height: 40px")
+
++footer({
+  logo: {
+    src: "src/assets/samples/logo.png",
+    alt: "logo"
+  },
+  simple: true
+})
