--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,23 +1,39 @@
 .footer {
-  &__columns {
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px $dark05;
+
+  &--simple {
     box-sizing: border-box;
-    width: 1440px;
-    height: 372px;
-    padding: 100px 140px;
+    width: 768px;
+    padding: 120px 104px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
+  &__simple-row {
+    padding-bottom: 20px;
+  }
+
+  &__columns,
   &__copyright {
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    border-top: 1px solid gray;
-    box-sizing: border-box;
     width: 1440px;
+  }
+
+  &__columns {
+    height: 372px;
+    padding: 100px 140px;
+    box-shadow: 0px 1px 0px $dark10;
+  }
+
+  &__copyright {
     height: 70px;
-    padding: 0 140px
+    padding: 0 140px;
   }
 
   &__col {
